tests/ui/self/invalid-self-dyn-receiver.stderr
error[E0307]: invalid `self` parameter type: `&dyn Bar`
  --> $DIR/invalid-self-dyn-receiver.rs:10:22
   |
LL |      fn method(self: &dyn Bar) {}
   |                      ^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing `Receiver`
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver` such as `self: Box<Self>`, `self: Rc<Self>`, or `self: Arc<Self>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0307`.
